Add instructions for installing g++.

--- a/dockerSetup/Dockerfile
+++ b/dockerSetup/Dockerfile
@@ -25,7 +25,10 @@ RUN git clone --progress --verbose \
     https://github.com/llvm-mirror/clang.git llvm/tools/clang
 RUN git clone --progress --verbose \
     https://github.com/llvm-mirror/clang-tools-extra.git llvm/tools/clang/tools/extra
-    
+
+# install g++
+RUN ["apt-get","install","g++"]
+
 # These volumes should be mounted as named volumes.
 VOLUME /llvm/build /peirce
 VOLUME /home
