--- a/src/Makefile
+++ b/src/Makefile
@@ -117,6 +117,9 @@ $(BUILDDIR)/ASTMatcher:$(SRC_CLANG_DIR)/Interpretation.cpp
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
 		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
+$(BUILDDIR)/ASTMatcher:$(SRC_CLANG_DIR)/Checker.cpp
+	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
+		$(CLANG_LIBS) $(LLVM_LDFLAGS) -o $@
 
 
 
