Now translating, but printing is done in coords, which doesn't see domain, so can't print spaces; need to move printing into domain objects.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,9 @@
         "iterator": "cpp",
         "locale": "cpp",
         "__split_buffer": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__hash_table": "cpp",
+        "unordered_map": "cpp",
+        "memory": "cpp"
     }
 }
