Finished initial draft of all methods mostly in ASTToCoords, connecting Interpretation to ASTToCoords and to Domain.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
         "string_view": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xlocale": "cpp",
+        "xlocnum": "cpp"
     }
 }
