--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/ASTMatcher",
-            "args": [],
+            "args": ["inputs/temp.7.cpp"],
             "stopAtEntry": false, 
             "cwd": "${workspaceFolder}",
             "environment": [],
