Added code for new intermediate "interp" nodes. These will know about both coords and domain. They will be responsible for printing concrete domain syntax, among other things. By contrast, we've had coords responsible for printing, but coords doesn't know about domain, so can't print space and such. Remaining to do: update interpretation to use these new objects, then flesh out their printing functions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,11 @@
         "sstream": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "codecvt": "cpp",
+        "csignal": "cpp",
+        "unordered_set": "cpp",
+        "future": "cpp",
+        "iomanip": "cpp"
     }
 }
