--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,3 @@
-
-
-LLVM_SRC_PATH := /llvm
-
 # LLVM_BUILD_PATH is the directory in which you built LLVM - where you ran
 # configure or cmake.
 # For linking vs. a binary build of LLVM, point to the main untarred directory.
@@ -22,7 +18,7 @@ $(info -----------------------------------------------)
 
 CXX := g++
 #CXXFLAGS := -fno-rtti -O0 -g -DBOOST_LOG_DYN_LINK
-CXXFLAGS := -O0 -g -Wall -Wextra -pedantic 
+CXXFLAGS := -O0 -g -Wall -Wextra -pedantic -MMD -MP
 #-Werror
 
 PLUGIN_CXXFLAGS := -fpic
@@ -105,8 +101,11 @@ make_builddir:
 
 # $(wildcard *.cpp /xxx/xxx/*.cpp): get all .cpp files from the current directory and dir "/xxx/xxx/"
 SRCS := $(wildcard *.cpp)
+
 # $(patsubst %.cpp,%.o,$(SRCS)): substitute all ".cpp" file name strings to ".o" file name strings
 OBJS := $(patsubst %.cpp,%.o,$(SRCS))
+
+DEPENDS = ${OBJS:.o=.d}    # substitutes ".o" with ".d"
 
 $(BUILDDIR)/ASTMatcher: $(SRC_CLANG_DIR)/$(SRCS)
 	$(CXX) $(CXXFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) $^ \
@@ -123,3 +122,5 @@ clean:
 
 format:
 	find . -name "*.cpp" | xargs clang-format -style=file -i
+
+-include ${DEPENDS}           # copies files x.d, y.d, z.d (if they exist)
