Start debugging for vector_def based on var expr

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/ASTMatcher",
-            "args": ["inputs/temp.4.cpp"],
+            "program": "${workspaceFolder}/bin/peirce",
+            "args": ["inputs/temp.10.cpp"],
             "stopAtEntry": false, 
             "cwd": "${workspaceFolder}",
             "environment": [],
