--- a/src/Makefile
+++ b/src/Makefile
@@ -91,7 +91,7 @@ CLANG_LIBS := \
 COMPILE.c = $(CC) $(DEPFLAGS) $(CFLAGS) $(CPPFLAGS) $(CLANG_LIBS) $(LLVM_LDFLAGS) -c -o $@
 
 # compile C++ source files
-COMPILE.cc = $(CXX) $(DEPFLAGS) $(CXXFLAGS) $(CPPFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) -c -o $@
+COMPILE.cc = $(CXX) $(DEPFLAGS) $(CXXFLAGS) $(CPPFLAGS) $(LLVM_CXXFLAGS) $(CLANG_INCLUDES) -c -fexceptions -o $@
 
 # link object files to binary
 LINK.o = $(LD) -o $@
