--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,13 @@
 		"ms-vscode.cpptools",
 		"ms-vsliveshare.vsliveshare",
 		"ms-vscode-remote.remote-containers",
-		"mitaki28.vscode-clang"
+		"mitaki28.vscode-clang",
+		"christian-kohler.path-intellisense",
+		"yzhang.markdown-all-in-one",
+		"ms-azuretools.vscode-docker",
+		"eamodio.gitlens",
+		"fatihacet.gitlab-workflow",
+		"coenraads.bracket-pair-colorizer",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
