--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
 		"eamodio.gitlens",
 		"fatihacet.gitlab-workflow",
 		"coenraads.bracket-pair-colorizer",
+		"stephanvs.dot",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
