Point Git Submodule to GitLab instead of GitLab

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/KjellKod/g3log.git
 [submodule "phys"]
 	path = deps/phys
-	url = https://github.com/kevinsullivan/phys.git
+	url = https://gitlab.cs.virginia.edu/kjs5d/phys.git
