--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,10 @@
         "csignal": "cpp",
         "unordered_set": "cpp",
         "future": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp"
     }
 }
