--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "phys"]
 	path = deps/phys
 	url = https://gitlab.cs.virginia.edu/kjs5d/phys.git
+[submodule "mathlib"]
+    path = deps/mathlib
+    url = https://github.com/leanprover-community/mathlib.git
