--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/KjellKod/g3log.git
 [submodule "phys"]
 	path = deps/phys
-	url = https://gitlab.cs.virginia.edu/kjs5d/phys.git
+	url = git@gitlab.cs.virginia.edu:physicalsemantics/Peirce.git
 [submodule "mathlib"]
     path = deps/mathlib
     url = https://github.com/leanprover-community/mathlib.git
