--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = deps/phys
 	url = git@gitlab.cs.virginia.edu:kjs5d/phys.git
 [submodule "mathlib"]
-	path = deps\\mathlib
+	path = deps/mathlib
 	url = https://github.com/leanprover-community/mathlib.git
