--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/g3log"]
 	path = deps/g3log
 	url = https://github.com/KjellKod/g3log.git
+[submodule "deps/phys"]
+	path = deps/phys
+	url = git@gitlab.cs.virginia.edu:kjs5d/phys.git
