Rewrote Coords. Changed Float to Scalar. Uncommented G3. Comments. No compiler warnings. Fixed Location bug (finally).

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,9 +35,9 @@ LD := clang++
 TAR := tar
 
 # C flags
-CFLAGS := -O0 -g -Wall -Wextra -pedantic
+CFLAGS := -O0 -g -Wall -Wextra -Wno-unknown-warning-option -Wno-unused-command-line-argument -pedantic
 # C++ flags
-CXXFLAGS := -Od -g -Wall -Wextra -pedantic
+CXXFLAGS := -O0 -g -Wall -Wextra -Wno-unknown-warning-option -Wno-unused-command-line-argument -pedantic
 # C/C++ flags
 CPPFLAGS := 
 # Clang C++ flags
@@ -52,7 +52,7 @@ LLVM_LDFLAGS := `llvm-config --ldflags --libs --system-libs`
 DEPFLAGS = -MT $@ -MD -MP -MF $(DEPDIR)/$*.Td
 
 # linker libraries
-# LDLIBS = -lg3logger 
+LDLIBS = -lg3logger 
 
 # List of Clang libraries to link. The proper -L will be provided by the
 # call to llvm-config
