--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,7 @@
         "shared_mutex": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "*.ipp": "cpp"
     }
 }
