--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/KjellKod/g3log.git
 [submodule "deps/phys"]
 	path = deps/phys
-	url = git@gitlab.cs.virginia.edu:kjs5d/phys.git
+	url = https://github.com/kevinsullivan/phys.git
