--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,7 @@
 		"fatihacet.gitlab-workflow",
 		"coenraads.bracket-pair-colorizer",
 		"stephanvs.dot",
+		"karigari.chat"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
