added lean to list of recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,7 +15,8 @@
 		"fatihacet.gitlab-workflow",
 		"coenraads.bracket-pair-colorizer",
 		"stephanvs.dot",
-		"karigari.chat"
+		"karigari.chat",
+		"jroesch.lean"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
