--- a/ros/ros_cps_errors/src/annotation_test_cases/package.xml
+++ b/ros/ros_cps_errors/src/annotation_test_cases/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>physical_inconsistencies</name>
+  <name>annotations</name>
   <version>1.1.1</version>
 
   <author email="ae8rh@virginia.edu">Andrew Elsey</author>
   <maintainer email="ae8rh@virginia.edu">Andrew Elsey</maintainer>
-  <description>Starter code for demonstrating physically inconsistent ROS code</description>
+  <description>Starter code for providing annotations with Peirce</description>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -12,6 +12,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf_conversions</build_depend>
@@ -22,6 +23,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf_conversions></exec_depend>
