--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "g3log"]
 	path = g3log
 	url = https://github.com/KjellKod/g3log.git
+[submodule "affine_lib"]
+	path = affine_lib
+	url = https://github.com/drewjel/affine_lib.git
