--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "make",
             "type": "shell",
-            "command": "cd src && make -j 2 && make install",
+            "command": "cd src && make && make install",
             "group": {
                 "kind": "build",
                 "isDefault": true
