--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "make",
             "type": "shell",
-            "command": "cd /peirce/PeirceGen && mcs -out:PeirceGen.exe *.cs Generators/*.cs && mono PeirceGen.exe && cp -r /peirce/PeirceGen/symlinkme/* /peirce/src && cd /peirce/src && make && make install",
+            "command": "cd /peirce/PeirceGen && mcs -out:PeirceGen.exe -nowarn:0219 *.cs Generators/*.cs && mono PeirceGen.exe && cp -r /peirce/PeirceGen/symlinkme/* /peirce/src && cd /peirce/src && make && make install",
             "group": {
                 "kind": "build",
                 "isDefault": true
