--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,7 +16,8 @@
 		"coenraads.bracket-pair-colorizer",
 		"stephanvs.dot",
 		"karigari.chat",
-		"jroesch.lean"
+		"jroesch.lean",
+		"llvm-vs-code-extensions.vscode-clangd"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
