--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "coordinatized",
         "gitignore"
     ],,
-    "clangd.path": "/usr/bin/clangd-9".
+    "clangd.path": "/usr/bin/clangd-9",
     "files.associations": {
         "__locale": "cpp",
         "list": "cpp",
