Few changes made to compile_commands and settings.json, presumably by someone else during our shared session.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,5 +101,6 @@
         "valarray": "cpp",
         "stack": "cpp",
         "*.ipp": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
