Final push before merge

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,9 @@ build/
 .DS_Store
 peirce
 *.tar.gz
-PeirceOutput.lean
+PeirceOutput*
 Peircelog.*
 PeirceGen.exe
 .clangd
 compile_commands.json
+annotations.txt
