--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/peirce",
-            "args": ["/peirce/ros_test_cases/new_test_cases/src/new_test_cases/src/time_test.cpp", "-extra-arg=-I/opt/ros/melodic/include/"],
+            //"args": ["/peirce/ros_test_cases/new_test_cases/src/new_test_cases/src/time_test.cpp", "-extra-arg=-I/opt/ros/melodic/include/"],
+            "args": ["/peirce/ros_test_cases/new_test_cases/src/new_test_cases/src/geom3_test.cpp", "-extra-arg=-I/opt/ros/melodic/include/"],
+            
             //"args": ["/peirce/ros_test_cases/eval/1-TimestampUnitMismatches/test_suite/test_file1.cpp", "-extra-arg=-I/opt/ros/melodic/include/"],
             "stopAtEntry": false, 
             "cwd": "${workspaceFolder}",
