--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,13 +12,13 @@
 		"yzhang.markdown-all-in-one",
 		"ms-azuretools.vscode-docker",
 		"eamodio.gitlens",
-		"fatihacet.gitlab-workflow",
+		// "fatihacet.gitlab-workflow",
 		"coenraads.bracket-pair-colorizer",
 		"stephanvs.dot",
 		"karigari.chat",
 		"jroesch.lean",
 		"llvm-vs-code-extensions.vscode-clangd",
-		"ms-vscode.vscode-typescript-nex",
+		"ms-vscode.vscode-typescript-next",
 		"rbbit.typescript-hero"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
