Update recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
 	// See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
 	// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
 		"ms-vscode.cpptools",
@@ -10,6 +9,9 @@
 		"mitaki28.vscode-clang",
 		"christian-kohler.path-intellisense",
 		"yzhang.markdown-all-in-one",
+		"goessner.mdmath",
+		"davidanson.vscode-markdownlint",
+		"mathematic.vscode-pdf",
 		"ms-azuretools.vscode-docker",
 		"eamodio.gitlens",
 		"coenraads.bracket-pair-colorizer",
@@ -19,10 +21,12 @@
 		"llvm-vs-code-extensions.vscode-clangd",
 		"ms-vscode.vscode-typescript-next",
 		"rbbit.typescript-hero",
-		"tomoki1207.pdf"
+		"tomoki1207.pdf",
+		"gitlab.gitlab-workflow",
+		"ms-vsliveshare.vsliveshare",
+		"ms-vsliveshare.vsliveshare-audio",
+		"ms-vsliveshare.vsliveshare-pack",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
-	"unwantedRecommendations": [
-		
-	]
+	"unwantedRecommendations": []
 }
