--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,13 +36,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "uname -a && \\
-		git submodule init && \\
-		git submodule update && \\
-		leanproject get-mathlib-cache \\ 
-		&& echo '***************************** \
-				 Set your git name and email.\
-				 Copy ~/.ssh/_.pub to GitHub ssh keys'",
+	"postCreateCommand": "uname -a && git submodule init && git submodule update && leanproject get-mathlib-cache && echo 'Set your git name and email.'",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "vscode"
 	// TODO: Add vscode user creation to DOCKERFILE then uncomment
